# zenith

./: .gitignore  AUTOMATION_PLAN.md  CHANGELOG.md  CLAUDE.md  DISTRIBUTION.md  FRAMEWORK_IMPROVEMENTS.md  Makefile  PRODUCTION_TEST_ISSUES_V030.md  README.md  ROADMAP.md  ROADMAP_v0.1.4.md  TEST_V030_FIXES.md  TEST_ZENITH_V030.md  ZENITH_ASYNC_DATABASE_BUG.md  ZENITH_COMPREHENSIVE_ANALYSIS.md  ZENITH_FRAMEWORK_ISSUES.md  ZENITH_V0.3.0_TEST_REPORT.md  ZENITH_V030_COMPLETE_ANALYSIS.md  ZENITH_V030_FINAL_TEST_PROMPT.md  ZENITH_V030_FIXES_COMPLETE.md  ZENITH_V030_ISSUES.md  ZENITH_V030_REMAINING_ISSUES.md  alembic.ini  astro.config.mjs  benchmark_results.json  package-lock.json  package.json  pyproject.toml  setup.py  test_local.sh  zenith-0.3.0-production-issues.md  zenith-djscout-final-test-report.md  zenith-framework-issues.md  zenith-v030-issues-yt-text.md  zenith-v030-production-analysis.md  zenith-yt-text-final-test-report.md  zenith-yt-text-v030-migration-demo.md  zenith.db  zenithweb-implementation-issues-confirmed.md
.beads/: issues.jsonl
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: benchmark.yml  ci-minimal.yml  publish.yml  release.yml  test.yml
ai/: DECISIONS.md  DESIGN.md  PLAN.md  RESEARCH.md  STATUS.md  TODO.md
ai/research/: IMPROVEMENT_PLAN.md  sota-improvements-2024.md
benchmarks/: competitive_benchmarks.py  dev_mode_app.py  fastapi_app.py  fastapi_bench.py  flask_app.py  load_test_app.py  minimal_app.py  optimization_bench.py  quick_bench.py  run_benchmarks.py  simple_bench.py  zenith_app.py  zenith_minimal.py  zenith_simple.py
docs/: .gitignore  ALL_PAGES_CHECKLIST.md  CLAUDE.md  DOCUMENTATION_CLEANUP_GUIDELINES.md  DOCUMENTATION_PLAN.md  DOCUMENTATION_REVIEW.md  DOCUMENTATION_REVIEW_CHECKLIST.md  DOCUMENTATION_TASKS.md  MIGRATION.md  NEXT_STEPS.md  RATE_LIMITING_SECURITY.md  RELEASE_NOTES.md  _config.yml  astro.config.mjs  examples.html  index.md  package-lock.json  package.json  vite-crossorigin-plugin.js
docs/api/: file-api.md  index.md
docs/archive/: ARCHITECTURE_V2.md  MASTER_PLAN.md  ROADMAP_V2.md  TODO_IMMEDIATE.md  zenith_framework_spec.md
docs/benchmarks/: simple_bench.py  (+5 more)
examples/: 00-hello-world.py  01-basic-routing.py  02-pydantic-validation.py  03-context-system.py  03-modern-developer-experience.py  04-cors-middleware.py  04-one-liner-features.py  05-background-tasks.py  05-context-system.py  06-file-upload.py  07-websocket-chat.py  08-rate-limiting.py  10-cors-middleware.py  10-security-middleware.py  11-router-grouping.py  11-security-middleware.py  12-performance-monitoring.py  12-security-middleware.py  13-router-grouping.py  13-testing-patterns.py  14-advanced-background-processing.py  14-background-tasks.py  14-testing-patterns.py  15-advanced-background-processing.py  15-performance-monitoring.py  15-router-grouping.py  16-async-database-scoped.py  16-database-sessions.py  16-rails-like-dx.py  16-sqlmodel-integration.py  16-testing-patterns.py  17-fullstack-spa.py  17-one-liner-features.py  17-performance-monitoring.py  17-seamless-integration.py  18-database-sessions.py  18-frontend-serving-dx.py  18-seamless-integration.py  19-asgi-concurrent-optimization.py  19-improved-dx.py  (+14 more)
internal/: DEVELOPMENT.md  DJSCOUT_FEEDBACK.md  PERFORMANCE_OPTIMIZATIONS.md  STRATEGY.md  ZENITH_RECOMMENDATIONS.md
migration/: v0.3.0.md
public/: zenith-console.js
scripts/: bump_version.sh  generate-example-pages.js  run_performance_tests.py  test_release.sh  version_manager.py
tests/: conftest.py  debug_headers.py  test_client_example.py  test_performance.py
website/: index.html
zenith/: __init__.py  __version__.py  app.py  cli.py  decorators.py  exceptions.py  openapi.py  performance.py  zenith.py
(+350 files in other folders)
