[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["zenith"]

[project]
name = "zenith-framework"
version = "0.0.1"
description = "Modern Python web framework with clean architecture and type-safe dependency injection"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Nick", email = "nijaru7@gmail.com"}
]
keywords = ["web", "framework", "realtime", "liveview", "websockets"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers", 
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "uvicorn[standard]>=0.24.0",
    "starlette>=0.32.0",
    "websockets>=12.0",
    "jinja2>=3.1.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.19.0",
    "redis>=5.0.0",
    "pydantic[email]>=2.5.0",
    "structlog>=23.0.0",
    "click>=8.1.0",
    "pyjwt>=2.8.0",
    "bcrypt>=4.1.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0", 
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "ruff>=0.1.6",
    "pyright>=1.1.350",
    "ipdb>=0.13.0",
]
benchmark = [
    "fastapi>=0.104.0",
    "flask>=3.0.0",
    "flask-sqlalchemy>=3.1.0",
    "httpx>=0.25.0",
    "psutil>=5.9.0",
    "aiosqlite>=0.19.0",
]

[project.scripts]
zen = "zenith.cli:main"

[project.urls]
Homepage = "https://github.com/nijaru/zenith"
Repository = "https://github.com/nijaru/zenith"
Issues = "https://github.com/nijaru/zenith/issues"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings  
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "RUF", # ruff-specific
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
# Allow dependency injection patterns in framework code, examples, and tests
"zenith/**/*.py" = ["B008", "RUF006", "B024", "B027", "SIM102"]  # Allow Context(), Auth(), asyncio patterns, ABC design, readable if nesting
"examples/**/*.py" = ["B008"]  # Allow DI patterns in examples
"benchmarks/**/*.py" = ["B008"]  # Allow Depends() in benchmarks
"tests/**/*.py" = ["B008", "SIM102", "SIM117"]  # Allow DI patterns, readable if/with nesting

[tool.ruff.lint.isort]
known-first-party = ["zenith"]

[tool.pyright]
include = ["zenith"]  # Focus strict type checking on core framework
exclude = ["**/__pycache__", "examples/**", "tests/**"]  # Tests use mocking patterns that are intentionally looser
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --strict-config --verbose"
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "slow: marks tests as slow running",
]